--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 01 2020 09:36:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 02 2020 11:51:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -18,10 +18,10 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" aria-current="page" class="nav-link-4 w-nav-link w--current">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" aria-current="page" class="nav-link-4 w-nav-link w--current">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -29,7 +29,7 @@
   </div>
   <div class="testimonial_page_section">
     <div class="main_container mix-container">
-      <h2 class="section_h2">Testimonials</h2>
+      <h1 class="section_h1">Testimonials</h1>
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div data-w-id="917b686c-0e22-bc8f-8889-0287e98e202a" data-animation-type="lottie" data-src="documents/best_acupuncturist.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="2" data-duration="0" class="lottie-animation"></div>
       <div class="filter-controls"><a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a><a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a><a data-filter=".2009" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a><a href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a></div>
@@ -741,8 +741,8 @@
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="index.html" class="link_white">Terms of Use</a></li>
-              <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
+              <li class="footer_link"><a href="terms-of-use.html" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="privacy.html" class="link_white">Privacy Policy</a></li>
               <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
             </ul>
           </div>
@@ -765,7 +765,7 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
+              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr., Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
               <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
