--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 01 2020 09:36:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 02 2020 11:51:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,15 +16,15 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
-<body class="body">
+<body class="ryu_body">
   <div id="Hero" class="hero_section">
     <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true"><source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true"></video>
       <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic, Inc</h1>
-      <h1 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a journey...&quot;</h1><a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
+      <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a journey...&quot;</h2><a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -227,8 +227,8 @@
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="index.html" aria-current="page" class="link_white w--current">Terms of Use</a></li>
-              <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
+              <li class="footer_link"><a href="terms-of-use.html" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="privacy.html" class="link_white">Privacy Policy</a></li>
               <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
             </ul>
           </div>
@@ -251,7 +251,7 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
+              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr., Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
               <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
