--- a/ourteam.html
+++ b/ourteam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Oct 01 2020 09:36:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 02 2020 11:51:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -18,10 +18,10 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" aria-current="page" class="nav-link w-nav-link w--current">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" aria-current="page" class="nav-link w-nav-link w--current">Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -29,6 +29,8 @@
   </div>
   <div class="our_team_section">
     <div class="main_container">
+      <h1 class="section_h1">Meet Our Team</h1>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <h2 class="section_h2">Dr. Jay Ryu, L.Ac., Ph.D</h2>
       <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
       <div class="_2_block_row">
@@ -77,8 +79,8 @@
               <li class="footer_link"><a href="contact.html" class="link_white">Contact</a></li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="index.html" class="link_white">Terms of Use</a></li>
-              <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
+              <li class="footer_link"><a href="terms-of-use.html" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="privacy.html" class="link_white">Privacy Policy</a></li>
               <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
             </ul>
           </div>
@@ -101,7 +103,7 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
+              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr., Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
               <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
