--- a/ourteam.html
+++ b/ourteam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 02 2020 11:51:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 02 2020 13:06:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -10,8 +10,6 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/ryu-acupuncture.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -21,7 +19,7 @@
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link-6 w-nav-link">Home</a><a href="ourteam.html" aria-current="page" class="nav-link w-nav-link w--current">Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav_link w-nav-link">Home</a><a href="ourteam.html" aria-current="page" class="nav_link w-nav-link w--current">Team</a><a href="services.html" class="nav_link w-nav-link">Services</a><a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a><a href="contact.html" class="nav_link w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
