--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 02 2020 13:06:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Oct 02 2020 14:13:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,9 @@
       </div>
       <div class="insurance_block"></div>
       <div class="_2_block_row">
-        <div class="_65_block"></div>
+        <div class="_65_block">
+          <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601645676501!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+        </div>
         <div class="_35_block">
           <div class="w-layout-grid grid-2">
             <h3 class="hours_h3_left">Monday:</h3>
