Added a grid to homepage to layout 360 image, hours, parking info and some lightbox images of the exterior of the building

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Fri Oct 02 2020 14:13:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 04 2020 05:28:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -57,28 +57,86 @@
         </div>
       </div>
       <div class="insurance_block"></div>
-      <div class="_2_block_row">
-        <div class="_65_block">
-          <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601645676501!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+      <div class="exploratory_grid">
+        <div id="w-node-6af35bb795dc-bfb09bd8" class="div-block-3">
+          <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         </div>
-        <div class="_35_block">
-          <div class="w-layout-grid grid-2">
-            <h3 class="hours_h3_left">Monday:</h3>
-            <h3 class="hours_h3_right">9:30AM - 6PM</h3>
-            <h3 class="hours_h3_left">Tuesday:</h3>
-            <h3 class="hours_h3_right">10AM - 2PM</h3>
-            <h3 class="hours_h3_left">Wednesday:</h3>
-            <h3 class="hours_h3_right">9:30AM - 6PM</h3>
-            <h3 class="hours_h3_left">Thursday:</h3>
-            <h3 class="hours_h3_right">10AM - 2PM</h3>
-            <h3 class="hours_h3_left">Friday:</h3>
-            <h3 class="hours_h3_right">9:30AM - 6PM</h3>
-            <h3 class="hours_h3_left">Saturday:</h3>
-            <h3 class="hours_h3_right">9AM - 2PM</h3>
-            <h3 class="hours_h3_left">Sunday:</h3>
-            <h3 class="hours_h3_right">CLOSED</h3>
+        <div id="w-node-e5b4f1f1afb0-bfb09bd8">
+          <h2 class="heading">Hours</h2>
+          <div class="w-layout-grid hours_grid">
+            <h4 class="hours_h4_left">Monday:</h4>
+            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+            <h4 class="hours_h4_left">Tuesday:</h4>
+            <h4 class="hours_h4_right">CLOSED</h4>
+            <h4 class="hours_h4_left">Wednesday:</h4>
+            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+            <h4 class="hours_h4_left">Thursday:</h4>
+            <h4 class="hours_h4_right">CLOSED</h4>
+            <h4 class="hours_h4_left">Friday:</h4>
+            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+            <h4 class="hours_h4_left">Saturday:</h4>
+            <h4 class="hours_h4_right">9AM - 1:30PM</h4>
+            <h4 class="hours_h4_left">Sunday:</h4>
+            <h4 class="hours_h4_right">CLOSED</h4>
           </div>
+          <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
         </div>
+        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "5f795448e050e114f36745d5",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "height": 450,
+      "fileSize": 49062,
+      "url": "images/outside_of_ryu_acupuncture.jpg"
+    }
+  ]
+}</script></a></div>
+        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "5f795448e050e114f36745d5",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "height": 450,
+      "fileSize": 49062,
+      "url": "images/outside_of_ryu_acupuncture.jpg"
+    }
+  ]
+}</script></a></div>
+        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "5f795448e050e114f36745d5",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "height": 450,
+      "fileSize": 49062,
+      "url": "images/outside_of_ryu_acupuncture.jpg"
+    }
+  ]
+}</script></a></div>
+        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "5f795448e050e114f36745d5",
+      "fileName": "outside_of_ryu_acupuncture.jpg",
+      "origFileName": "outside_of_ryu_acupuncture.jpg",
+      "width": 649,
+      "height": 450,
+      "fileSize": 49062,
+      "url": "images/outside_of_ryu_acupuncture.jpg"
+    }
+  ]
+}</script></a></div>
       </div>
     </div>
   </div>
