Removed grid with phots and hoursand replaced with standard divs on home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 04 2020 05:28:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 04 2020 06:10:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -57,31 +57,17 @@
         </div>
       </div>
       <div class="insurance_block"></div>
-      <div class="exploratory_grid">
-        <div id="w-node-6af35bb795dc-bfb09bd8" class="div-block-3">
+      <div class="_2_block_row">
+        <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         </div>
-        <div id="w-node-e5b4f1f1afb0-bfb09bd8">
-          <h2 class="heading">Hours</h2>
-          <div class="w-layout-grid hours_grid">
-            <h4 class="hours_h4_left">Monday:</h4>
-            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-            <h4 class="hours_h4_left">Tuesday:</h4>
-            <h4 class="hours_h4_right">CLOSED</h4>
-            <h4 class="hours_h4_left">Wednesday:</h4>
-            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-            <h4 class="hours_h4_left">Thursday:</h4>
-            <h4 class="hours_h4_right">CLOSED</h4>
-            <h4 class="hours_h4_left">Friday:</h4>
-            <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-            <h4 class="hours_h4_left">Saturday:</h4>
-            <h4 class="hours_h4_right">9AM - 1:30PM</h4>
-            <h4 class="hours_h4_left">Sunday:</h4>
-            <h4 class="hours_h4_right">CLOSED</h4>
-          </div>
+        <div class="hours_block">
+          <h2 class="services_h3_mobile">Hours</h2>
           <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
         </div>
-        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+      </div>
+      <div class="_4_block_row">
+        <div class="_4_block_left"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -95,7 +81,7 @@
     }
   ]
 }</script></a></div>
-        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -109,7 +95,7 @@
     }
   ]
 }</script></a></div>
-        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -123,7 +109,7 @@
     }
   ]
 }</script></a></div>
-        <div><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block_right"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -137,6 +123,25 @@
     }
   ]
 }</script></a></div>
+      </div>
+      <p class="paragraph-8-copy">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
+      <div>
+        <div class="w-layout-grid hours_grid">
+          <h4 class="hours_h4_left">Monday:</h4>
+          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+          <h4 class="hours_h4_left">Tuesday:</h4>
+          <h4 class="hours_h4_right">CLOSED</h4>
+          <h4 class="hours_h4_left">Wednesday:</h4>
+          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+          <h4 class="hours_h4_left">Thursday:</h4>
+          <h4 class="hours_h4_right">CLOSED</h4>
+          <h4 class="hours_h4_left">Friday:</h4>
+          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
+          <h4 class="hours_h4_left">Saturday:</h4>
+          <h4 class="hours_h4_right">9AM - 1:30PM</h4>
+          <h4 class="hours_h4_left">Sunday:</h4>
+          <h4 class="hours_h4_right">CLOSED</h4>
+        </div>
       </div>
     </div>
   </div>
@@ -387,7 +392,7 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr., Suite 510</a></li>
+              <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
               <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
