Many minor changes due to info block, need to adjust still for mobile

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 04 2020 06:10:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 04 2020 11:52:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -73,13 +73,13 @@
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list w-list-unstyled">
-              <li>Mon: 9:30AM - 6:00PM</li>
-              <li>Tue: 10:00AM - 2:00PM</li>
-              <li>Wed: 9:30AM - 6:00PM</li>
-              <li>Thu: 10:00AM - 2:00PM</li>
-              <li>Fri: 9:30AM - 6:00PM</li>
-              <li>Sat: 9:00AM - 2:00PM</li>
-              <li>Sun: Closed</li>
+              <li class="list-item">Mon: 9:30AM - 6:00PM</li>
+              <li class="list-item-2">Tue: Closed</li>
+              <li class="list-item-3">Wed: 9:30AM - 6:00PM</li>
+              <li class="list-item-8">Thu: Closed</li>
+              <li class="list-item-9">Fri: 9:30AM - 6:00PM</li>
+              <li class="list-item-10">Sat: 9:00AM - 1:30PM</li>
+              <li class="list-item-11">Sun: Closed</li>
             </ul>
           </div>
         </div>
@@ -88,10 +88,10 @@
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
-              <li>Burbank, CA 91505</li>
-              <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
-              <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
-              <li>Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
+              <li class="list-item-4">Burbank, CA 91505</li>
+              <li class="list-item-5">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
+              <li class="list-item-6">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
+              <li class="list-item-7">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
               <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
               <li class="footer_list_item"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
