--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 04 2020 06:10:58 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 04 2020 11:52:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -50,24 +50,46 @@
         </div>
       </div>
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="_2_block_row">
-        <div class="_65_block"></div>
-        <div class="_35_block">
-          <div class="div-block"></div>
-        </div>
-      </div>
-      <div class="insurance_block"></div>
-      <div class="_2_block_row">
+      <div class="_2_block_row_info">
         <div class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         </div>
         <div class="hours_block">
           <h2 class="services_h3_mobile">Hours</h2>
+          <div class="_2_block_row">
+            <div class="_2_block_day_full">
+              <div class="days_text">Monday: </div>
+              <div class="days_text">Tuesday:</div>
+              <div class="days_text">Wednesday:</div>
+              <div class="days_text">Thursday:</div>
+              <div class="days_text">Friday:</div>
+              <div class="days_text">Saturday:</div>
+              <div class="days_text">Sunday:</div>
+            </div>
+            <div class="_2_block_day_short">
+              <div class="days_text">Mon: </div>
+              <div class="days_text">Tue:</div>
+              <div class="days_text">Wed:</div>
+              <div class="days_text">Thu:</div>
+              <div class="days_text">Fri:</div>
+              <div class="days_text">Sat:</div>
+              <div class="days_text">Sun:</div>
+            </div>
+            <div class="_2_block">
+              <div class="hours_text">9:30AM-6PM</div>
+              <div class="hours_text">Closed</div>
+              <div class="hours_text">9:30AM-6PM</div>
+              <div class="hours_text">Closed</div>
+              <div class="hours_text">9:30AM-6PM</div>
+              <div class="hours_text">9AM-1:30PM</div>
+              <div class="hours_text">Closed</div>
+            </div>
+          </div>
           <p class="paragraph-8">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
         </div>
       </div>
       <div class="_4_block_row">
-        <div class="_4_block_left"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block_left"><a href="#" class="lightbox-link-3 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -81,7 +103,7 @@
     }
   ]
 }</script></a></div>
-        <div class="_4_block"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block"><a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -95,7 +117,7 @@
     }
   ]
 }</script></a></div>
-        <div class="_4_block"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block"><a href="#" class="lightbox-link-2 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -109,7 +131,7 @@
     }
   ]
 }</script></a></div>
-        <div class="_4_block_right"><a href="#" class="w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
+        <div class="_4_block_right"><a href="#" class="lightbox-link-4 w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "image",
@@ -124,25 +146,7 @@
   ]
 }</script></a></div>
       </div>
-      <p class="paragraph-8-copy">Two-hour free parking available on the street. Paid parking lot directly behind building.</p>
-      <div>
-        <div class="w-layout-grid hours_grid">
-          <h4 class="hours_h4_left">Monday:</h4>
-          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-          <h4 class="hours_h4_left">Tuesday:</h4>
-          <h4 class="hours_h4_right">CLOSED</h4>
-          <h4 class="hours_h4_left">Wednesday:</h4>
-          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-          <h4 class="hours_h4_left">Thursday:</h4>
-          <h4 class="hours_h4_right">CLOSED</h4>
-          <h4 class="hours_h4_left">Friday:</h4>
-          <h4 class="hours_h4_right">9:30AM - 6PM</h4>
-          <h4 class="hours_h4_left">Saturday:</h4>
-          <h4 class="hours_h4_right">9AM - 1:30PM</h4>
-          <h4 class="hours_h4_left">Sunday:</h4>
-          <h4 class="hours_h4_right">CLOSED</h4>
-        </div>
-      </div>
+      <div class="insurance_block"></div>
     </div>
   </div>
   <div class="parallax_section">
@@ -378,13 +382,13 @@
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list w-list-unstyled">
-              <li>Mon: 9:30AM - 6:00PM</li>
-              <li>Tue: 10:00AM - 2:00PM</li>
-              <li>Wed: 9:30AM - 6:00PM</li>
-              <li>Thu: 10:00AM - 2:00PM</li>
-              <li>Fri: 9:30AM - 6:00PM</li>
-              <li>Sat: 9:00AM - 2:00PM</li>
-              <li>Sun: Closed</li>
+              <li class="list-item">Mon: 9:30AM - 6:00PM</li>
+              <li class="list-item-2">Tue: Closed</li>
+              <li class="list-item-3">Wed: 9:30AM - 6:00PM</li>
+              <li class="list-item-8">Thu: Closed</li>
+              <li class="list-item-9">Fri: 9:30AM - 6:00PM</li>
+              <li class="list-item-10">Sat: 9:00AM - 1:30PM</li>
+              <li class="list-item-11">Sun: Closed</li>
             </ul>
           </div>
         </div>
@@ -393,10 +397,10 @@
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
-              <li>Burbank, CA 91505</li>
-              <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
-              <li>Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
-              <li>Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
+              <li class="list-item-4">Burbank, CA 91505</li>
+              <li class="list-item-5">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
+              <li class="list-item-6">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
+              <li class="list-item-7">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
               <li class="footer_link-2"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
               <li class="footer_list_item"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
             </ul>
