Cleaned up minor items on homepage in regards to the info block and how it changed footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 04 2020 11:52:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 04 2020 21:31:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -56,7 +56,7 @@
         </div>
         <div class="hours_block">
           <h2 class="services_h3_mobile">Hours</h2>
-          <div class="_2_block_row">
+          <div class="_2_block_row_horizontal">
             <div class="_2_block_day_full">
               <div class="days_text">Monday: </div>
               <div class="days_text">Tuesday:</div>
