--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 05 2020 09:39:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 07 2020 05:38:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
           <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
         </div>
         <div class="_2_block margin_left">
-          <div class="w-form">
+          <div class="form-block w-form">
             <form id="email-form" name="email-form" data-name="Email Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button"></form>
             <div class="w-form-done">
